r87 (08. 10. 2022):
Added proper support for Beardlib achievements
Added throwable regen AI buff
Code cleanup and improvements
Firestarter Day 1: Added achievement tracker for "Wasteful"
The Yacht Heist: Added achievement tracker for "Blood in the Water"

r86 (01. 10. 2022):
Fixed an issue where unlocked achievements are still visible in tracker when an option to hide them is enabled

r85 (30. 09. 2022):
Unlockables: Fixed options not saving correctly

r84 (29. 09. 2022):
Added "Show Escape Chance" option
Added option to show Trophies and Daily Side Jobs
Achievement related options are now under "Unlockables" menu - Trophy and Daily Side Jobs options are there too
Bloodthirst Buff: Fixed an issue where buff's progress is always full when you are still stacking kills
Loot Counter: Fixed an issue where sometimes triggers do not have increase progress or maximum
XP Counter: Fixed a very rare crash when game returned "nil" value instead of a number in how much stealth bonus you accumulated

r83 (21. 09. 2022):
Added trackers for achievements "Field Test", "Heister With A Shotgun" and "Snake Charmer"
Added "Show Bodybags Counter" option

r82 (14. 09. 2022):
Loot Tracker: Added support for variable random loot
Fixed an issue where Crit Chance buff shows "100s" after spawn
Fixed an issue where Dodge Chance buff shows "100s" after spawn
Fixed an issue where "GAGE PACKAGES" popup is visible after sync when a heist does not support them
VR: Fixed trackers not visible
Buluc's Mansion: Fixed achievement trackers not showing up
The Bomb: Forest: Added achievement tracker for "Pump It Up"
Watchdogs Day 1: Added achievement tracker for "Coming in Hot"
Watchdogs Day 2: Fixed an issue where Loot Counter is off by 10 bags

r81 (07. 09. 2022):
Fixed a crash when you switched weapons and both of them have "Reconnaissance Sight"

r80 (30. 08. 2022):
Added "Show Loot Counter" option
Mountain Master: Fixed a load crash when "Show Timers" option is disabled