@@ -2,19 +2,21 @@ local EHI = EHI
 local Icon = EHI.Icons
 local SF = EHI.SpecialFunctions
 local TT = EHI.Trackers
-local show_achievement = EHI:ShowMissionAchievements()
 local ovk_and_up = EHI:IsDifficultyOrAbove(EHI.Difficulties.OVERKILL)
-local fire_recharge = { time = 180, id = "FireRecharge", icons = { Icon.Fire, Icon.Loop } }
-local fire_t = { time = 60, id = "Fire", icons = { Icon.Fire }, class = TT.Warning }
+local LootDrop = { Icon.Escape, Icon.LootDrop }
+local TimedLootDrop = { Icon.Escape, Icon.LootDrop, Icon.Wait }
+local FireTrapIndexes = { 0, 120, 240, 360, 480 }
 local triggers = {
-    [100647] = { time = 240 + 60, id = "Chimney", icons = { Icon.Escape, Icon.LootDrop } },
-    [EHI:GetInstanceElementID(100078, 10700)] = { time = 60, id = "Chimney", icons = { Icon.Escape, Icon.LootDrop }, special_function = SF.AddTrackerIfDoesNotExist },
-    [EHI:GetInstanceElementID(100078, 11000)] = { time = 60, id = "Chimney", icons = { Icon.Escape, Icon.LootDrop }, special_function = SF.AddTrackerIfDoesNotExist },
-    [EHI:GetInstanceElementID(100011, 10700)] = { time = 207 + 3, id = "ChimneyClose", icons = { Icon.Escape, Icon.LootDrop, Icon.Wait }, class = TT.Warning, special_function = SF.ReplaceTrackerWithTracker, data = { id = "Chimney" } },
-    [EHI:GetInstanceElementID(100011, 11000)] = { time = 207 + 3, id = "ChimneyClose", icons = { Icon.Escape, Icon.LootDrop, Icon.Wait }, class = TT.Warning, special_function = SF.ReplaceTrackerWithTracker, data = { id = "Chimney" } },
+    [100647] = { time = 240 + 60, id = "Chimney", icons = LootDrop },
+    [EHI:GetInstanceElementID(100078, 10700)] = { time = 60, id = "Chimney", icons = LootDrop, special_function = SF.AddTrackerIfDoesNotExist },
+    [EHI:GetInstanceElementID(100078, 11000)] = { time = 60, id = "Chimney", icons = LootDrop, special_function = SF.AddTrackerIfDoesNotExist },
+    [EHI:GetInstanceElementID(100011, 10700)] = { time = 207 + 3, id = "ChimneyClose", icons = TimedLootDrop, class = TT.Warning, special_function = SF.ReplaceTrackerWithTracker, data = { id = "Chimney" } },
+    [EHI:GetInstanceElementID(100011, 11000)] = { time = 207 + 3, id = "ChimneyClose", icons = TimedLootDrop, class = TT.Warning, special_function = SF.ReplaceTrackerWithTracker, data = { id = "Chimney" } },
     [EHI:GetInstanceElementID(100135, 11300)] = { time = 12, id = "SafeEvent", icons = { Icon.Heli, Icon.Goto } }
 }
-for _, index in ipairs({0, 120, 240, 360, 480}) do
+local fire_recharge = { time = 180, id = "FireRecharge", icons = { Icon.Fire, Icon.Loop } }
+local fire_t = { time = 60, id = "Fire", icons = { Icon.Fire }, class = TT.Warning }
+for _, index in ipairs(FireTrapIndexes) do
     local recharge = EHI:DeepClone(fire_recharge)
     recharge.id = recharge.id .. index
     triggers[EHI:GetInstanceElementID(100024, index)] = recharge
@@ -29,11 +31,22 @@ local achievements =
     [101176] = { id = "cane_2", special_function = SF.SetAchievementFailed }
 }
 
+if EHI:MissionTrackersAndWaypointEnabled() then
+    local DisableWaypoints =
+    {
+        [EHI:GetInstanceElementID(100016, 10700)] = true,
+        [EHI:GetInstanceElementID(100016, 11000)] = true
+    }
+    EHI:DisableWaypoints(DisableWaypoints)
+    triggers[EHI:GetInstanceElementID(100011, 10700)].waypoint = { icon = Icon.LootDrop, position_by_element = EHI:GetInstanceElementID(100016, 10700), warning = true }
+    triggers[EHI:GetInstanceElementID(100011, 11000)].waypoint = { icon = Icon.LootDrop, position_by_element = EHI:GetInstanceElementID(100016, 11000), warning = true }
+end
+
 EHI:ParseTriggers({
     mission = triggers,
     achievement = achievements
 })
-if show_achievement and ovk_and_up then
+if EHI:ShowMissionAchievements() and ovk_and_up then
     EHI:ShowAchievementLootCounter({
         achievement = "cane_3",
         max = 100,
@@ -50,7 +63,7 @@ local tbl =
     [EHI:GetInstanceElementID(100226, 11300)] = { ignore = true },
     [EHI:GetInstanceElementID(100227, 11300)] = { icons = { Icon.Vault }, remove_on_pause = true, completion = true }
 }
-for _, index in ipairs({0, 120, 240, 360, 480}) do
+for _, index in ipairs(FireTrapIndexes) do
     --units/pd2_indiana/props/gen_prop_security_timer/gen_prop_security_timer
     -- OVK decided to use one timer for fire and fire recharge
 	-- This ignores them and that timer is implemented in the for loop above
